TLMBLGIS-234-2 - mode fiddles with breakpoints

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -52,10 +52,12 @@
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              <span class="hidden-sm visible-lg-inline visible-sm-inline visible-md-inline">{{category || 'All Events'}}</span>
-              <span class="visible-sm-inline visible-sm-inline">Events</span>
-              <span ng-show="category && category !=='All Events'" class="hidden-sm hidden-md"> Events</span>
-              <span class="caret"></span></a>
+              <span class="visible-lg-inline visible-md-inline">{{category || 'All Events'}}</span>
+              <span class="visible-sm-inline">See</span>
+              <span class="visible-xs-inline">Events</span>
+              <span ng-show="category && category !=='All Events'" class="visible-lg-inline"> Events</span>
+              <span class="caret"></span>
+            </a>
             <ul class="dropdown-menu" id="categories">
               <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category)">{{category}}</a></li>
               <li role="separator" class="divider"></li>
