--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -94,15 +94,15 @@
   </nav>
   <div class="overlay" ng-hide="online">
   </div>
-  <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak>You are offline</div>
-  <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
+  <div  class="alert alert-danger alertPanel" ng-hide="online" ng-cloak id="offlineAlertPanel" style="display:none">You are offline</div>
+  <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert"  style="display:none" id="alertPanel">
     <button type="button" class="close" aria-label="Close" ng-click="dismissAlert()"><span aria-hidden="true">&times;</span></button>
     <p ng-hide="alert.type !=='alert-danger'">
       An error has occurred. Please contact your System Administrator for assistance.
     </p>
     <small>{{alert.message}}</small>
   </div>
-  <div ng-show="!loggedin" class="logo-login">
+  <div ng-show="!loggedin"  id="loginPanel" class="logo-login" style="display:none">
     <div class="splash visible-md-block visible-lg-block visible-sm-block">
       <a class="btn btn-lg btn-um" style="font-size:25px" onclick="window.location.href='/accounts/login/'">Login</a>
     </div>
@@ -114,7 +114,8 @@
 
   <div role="main" ng-show="loggedin">
     <div id="text_only"></div>
-    <div class="alert alert-info" style="margin:10px" ng-show="!textEvents.length" ng-cloak  ng-hide="!online">
+    <!--  -->
+    <div ng-show="!textEvents.length" id="eventCounterPanel" class="alert alert-info" style="display:none;margin:10px" ng-cloak ng-hide="!online">
       No {{currentView | lowercase}} {{selectedCategory}} events available.
     </div>
     <div class="container-fluid" style="margin:0;" >
